# teensy-led-matrix

./: Cargo.toml  README.md  rustfmt.toml  shift-reg-led-notes.txt
.cargo/: config.toml
src/: button.rs  collections.rs  color.rs  driver.rs  framebuffer.rs  intrinsics.rs  led_driver.rs  main.rs  peripherals.rs  pins.rs  take_mut.rs  unwrap.rs
src/program/: clock.rs  hue_cycle.rs  mod.rs  rain.rs  rainbow.rs
