[package]
name = "teensy-led-matrix"
version = "0.1.0"
authors = ["burgerindividual"]
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.7", features = ["inline-asm", "cm7"]}
teensy4-panic = "0.2.2"
teensy4-bsp = {version = "0.4.4", features = ["rt"]}
rand = {version = "0.8.5", default-features = false, features = ["small_rng"]}
embedded-alloc = "0.5.0"

[profile.release]
opt-level = 3
lto = true

[profile.asm]
inherits = "release"
lto = false
