[package]
name = "teensy-led-matrix"
version = "0.1.0"
authors = ["burgerindividual"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "cm7"] }
cortex-m-rt = "0.7"
teensy4-panic = "*"
teensy4-bsp = { version = "0.4", features = ["rt"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
embedded-alloc = "0.5"
chrono = { version = "0.4", default-features = false }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

[profile.asm]
inherits = "release"
lto = false
